--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Portfolio website</title>
-        <link rel="stylesheet" type ="text/css" href="../git_test1/style.css">
+        <link rel="stylesheet" type ="text/css" href="Portfolio/git_test1/style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href = "https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
@@ -40,7 +40,7 @@
         <a id="about_page">
         <section class ="about">
             <div class ="main">
-                <img src ="../git_test1/jef.jpg">
+                <img src ="Portfolio/git_test1/jef.jpg">
                 <div class = "about-text">
                     <h2>About Me</h2>
                     <h5>Singapore University Student</h5>
