--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a id="about_page">
         <section class ="about">
             <div class ="main">
-                <img src ="Portfolio/git_test1/jef.jpg">
+                <img src ="jef.jpg">
                 <div class = "about-text">
                     <h2>About Me</h2>
                     <h5>Singapore University Student</h5>
