--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
 
             <div class = "title2">
             <h2>Past Experiences</h2>
+                <p> I am currently working part-time as a Software Tester at Alpsoft Company. We are working with EnterpriseSG and Redairship on an ongoing government webapplication: startupsg.gov.sg
+                My role mainly comprise of testing the new features and give relevant feedbacks. Also work on documentation of the user test flow and also other documents like the admin system manual etc.
+            </p>
         </div>
 
         </div>
