--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <div class ="pra">
                                 <p>The application is built to showcase the understanding for web development using react.js </p>
                                 <p style = "text-align : center;">
-                                <a class = "button" href = "https://github.com/Arcyonix/Projects/tree/main/RecoFlat%20Webpage" >Read More</a>
+                                <a class = "button" href = "https://github.com/iiJoe/RecoFlat" >Read More</a>
                                 </p>
                             </div>
                             </div>
